Prevent horizontal list scrollbar

--- a/src/components/App/styles/index.css
+++ b/src/components/App/styles/index.css
@@ -40,7 +40,7 @@
 
 .main {
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   width: 100%;
 }
 
